--- a/Talleres/4/src/makefile
+++ b/Talleres/4/src/makefile
@@ -1,6 +1,6 @@
-OBJS   = main.o airport.o edge.o flight.o graphadjacencylistprice.o node.o util.o
-SOURCE = main.cxx Airport.cxx Edge.cxx Flight.cxx GraphAdjacencyListPrice.cxx Node.cxx Util.cxx
-HEADER = Airport.hpp Csv.hpp Edge.hpp Flight.hpp GraphAdjacencyListPrice.hpp Node.hpp Util.hpp
+OBJS   = main.o airport.o edge.o flight.o graphadjacencylistprice.o node.o util.o graphadjacencylisttime.o graphadjacencylistdistance.o
+SOURCE = main.cxx Airport.cxx Edge.cxx Flight.cxx GraphAdjacencyListPrice.cxx Node.cxx Util.cxx GraphAdjacencyListTime.cxx GraphAdjacencyListDistance.cxx
+HEADER = Airport.hpp Csv.hpp Edge.hpp Flight.hpp GraphAdjacencyListPrice.hpp Node.hpp Util.hpp GraphAdjacencyListTime.hpp GraphAdjacencyListDistance.hpp
 OUT = main
 CC = g++
 FLAGS = -std=c++11 -g -c -Wall
@@ -29,6 +29,12 @@ node.o: Node.cxx
 util.o: Util.cxx
 	$(CC) $(FLAGS) Util.cxx -o Util.o
 
+graphadjacencylisttime.o: GraphAdjacencyListTime.cxx
+	$(CC) $(FLAGS) GraphAdjacencyListTime.cxx -o GraphAdjacencyListTime.o
+
+graphadjacencylistdistance.o: GraphAdjacencyListDistance.cxx
+	$(CC) $(FLAGS) GraphAdjacencyListDistance.cxx -o GraphAdjacencyListDistance.o
+	
 
 clean:
 ifeq ($(OS), Windows_NT)
