--- a/Curiosity/src/makefile
+++ b/Curiosity/src/makefile
@@ -1,6 +1,9 @@
-OBJS   = obj/main.o obj/command.o obj/curiosity.o obj/element.o obj/system.o obj/vector.o obj/agregar.o obj/ayuda.o obj/cargar.o obj/guardar.o obj/simular_comandos.o obj/ubicar_elementos.o obj/util.o obj/point.o obj/quadnode.o obj/quadtree.o obj/en_cuadrante.o obj/Edge.o obj/Graph.o obj/Node.o obj/crear_mapa.o
-SOURCE = main.cxx classes/command.cxx classes/curiosity.cxx classes/element.cxx classes/system.cxx classes/vector.cxx commands/agregar.cxx commands/ayuda.cxx commands/cargar.cxx commands/guardar.cxx commands/simular_comandos.cxx commands/ubicar_elementos.cxx util/util.cxx trees/quad/point.cxx trees/quad/quadnode.cxx trees/quad/quadtree.cxx commands/en_cuadrante.cxx graph/Edge.cxx graph/Graph.cxx graph/Node.cxx commands/crear_mapa.cxx
-HEADER = classes/command.hpp classes/curiosity.hpp classes/element.hpp classes/system.hpp classes/vector.hpp commands/agregar.hpp commands/ayuda.hpp commands/cargar.hpp commands/guardar.hpp commands/simular_comandos.hpp commands/ubicar_elementos.hpp util/util.hpp trees/quad/point.hpp trees/quad/quadnode.hpp trees/quad/quadtree.hpp commands/en_cuadrante.hpp graph/Edge.hpp graph/Graph.hpp graph/Node.hpp commands/crear_mapa.cxx
+OBJS   = obj/main.o obj/command.o obj/curiosity.o obj/element.o obj/system.o obj/vector.o obj/agregar.o obj/ayuda.o obj/cargar.o obj/guardar.o obj/simular_comandos.o obj/ubicar_elementos.o obj/util.o obj/point.o obj/quadnode.o obj/quadtree.o obj/en_cuadrante.o obj/Edge.o obj/Graph.o obj/Node.o obj/crear_mapa.o obj/ruta_mas_larga.o
+
+SOURCE = main.cxx classes/command.cxx classes/curiosity.cxx classes/element.cxx classes/system.cxx classes/vector.cxx commands/agregar.cxx commands/ayuda.cxx commands/cargar.cxx commands/guardar.cxx commands/simular_comandos.cxx commands/ubicar_elementos.cxx util/util.cxx trees/quad/point.cxx trees/quad/quadnode.cxx trees/quad/quadtree.cxx commands/en_cuadrante.cxx graph/Edge.cxx graph/Graph.cxx graph/Node.cxx commands/crear_mapa.cxx commands/ruta_mas_larga.cxx
+
+HEADER = classes/command.hpp classes/curiosity.hpp classes/element.hpp classes/system.hpp classes/vector.hpp commands/agregar.hpp commands/ayuda.hpp commands/cargar.hpp commands/guardar.hpp commands/simular_comandos.hpp commands/ubicar_elementos.hpp util/util.hpp trees/quad/point.hpp trees/quad/quadnode.hpp trees/quad/quadtree.hpp commands/en_cuadrante.hpp graph/Edge.hpp graph/Graph.hpp graph/Node.hpp commands/crear_mapa.hpp commands/ruta_mas_larga.hpp
+
 OUT = main
 CC = g++
 FLAGS = -std=c++11 -g -c -Wall
@@ -72,6 +75,9 @@ obj/Node.o: graph/Node.cxx
 
 obj/crear_mapa.o: commands/crear_mapa.cxx
 	$(CC) $(FLAGS) commands/crear_mapa.cxx -o obj/crear_mapa.o
+
+obj/ruta_mas_larga.o: commands/ruta_mas_larga.cxx
+	$(CC) $(FLAGS) commands/ruta_mas_larga.cxx -o obj/ruta_mas_larga.o
 
 clean:
 ifeq ($(OS), Windows_NT)
